--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js"
   },
   "author": "drs",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "validator": "^11.0.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^9.0.3"
   }
 }
