--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
+    "node-spotify-api": "^1.1.1",
     "validator": "^11.0.0"
   },
   "devDependencies": {
