--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "drs",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "igdb-api-node": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.0",
     "node-spotify-api": "^1.1.1",
+    "request": "^2.88.0",
     "validator": "^11.0.0"
   },
   "devDependencies": {
