--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "google-books-search": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
+    "moviedb": "^0.2.10",
     "node-spotify-api": "^1.1.1",
     "validator": "^11.0.0"
   },
