--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "media-library server",
-  "main": "index.js",
+  "author": "drs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "env-cmd -f ./config/dev.env nodemon index.js",
     "start": "node index.js"
   },
-  "author": "drs",
-  "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
@@ -25,6 +23,10 @@
     "validator": "^11.0.0"
   },
   "devDependencies": {
-    "env-cmd": "^9.0.3"
-  }
+    "env-cmd": "^9.0.3",
+    "sass": "^1.17.4",
+    "sass-loader": "^7.1.0"
+  },
+  "license": "ISC",
+  "main": "index.js"
 }
